# pdf2zh

./: .gitignore  LICENSE  README.md  package-lock.json  package.json  release-notes.md
.github/workflows/: release-macos.yml  release.yml
.tmp-e2e/: math-probe.typ
.tmp-e2e/karol/: translated.md  translated.typ  translation_report.json
.tmp-e2e/karol-rebuild/: translated.md  translated.typ  translation_report.json
.tmp-e2e/karol/assets/: 0b45e6cd-a43e-4a61-b886-acf5dd404284_content_list.json  0b45e6cd-a43e-4a61-b886-acf5dd404284_content_list_v2.json  0b45e6cd-a43e-4a61-b886-acf5dd404284_model.json  layout.json
.tmp-e2e/simple/: translated.md  translated.typ  translation_report.json
.tmp-e2e/simple/assets/: d6497209-4e36-4451-be8d-86fec886a08f_content_list.json  d6497209-4e36-4451-be8d-86fec886a08f_content_list_v2.json  d6497209-4e36-4451-be8d-86fec886a08f_model.json  layout.json
backend/: requirements-runtime.txt  translator_pipeline.py
backend/pandoc/: defaults.yaml  header.tex
backend/runtime/: README.md
scripts/: generate-release-notes.mjs  prepare-python-deps.mjs  prepare-runtime.mjs  prepare-tectonic-cache.mjs  set-version.mjs  sync-version.mjs  verify-runtime.mjs
src/: App.css  App.tsx  app-types.ts  main.tsx  tauri-state.ts
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/components/: AppErrorBoundary.tsx  SecretInput.tsx
src/pages/: HistoryWindow.tsx  MainWindow.tsx  ProgressWindow.tsx  SettingsWindow.tsx  TutorialWindow.tsx
(+2 files in other folders)
